--- a/components/Carousel/Carousel.less
+++ b/components/Carousel/Carousel.less
@@ -1,5 +1,6 @@
 .carousel {
   .width-100();
+  z-index: 0;
   .flex(center, center);
   height: 500px;
   position: relative;
